--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -165,7 +165,7 @@ flip grain 'button' above image, size input on left and bottom.
 													stroke="#0094D9" stroke-width="5.76" fill-opacity="0" />
 											</svg>
 											<mat-grid-tile-footer>
-												<mat-radio-button class="lp" value="laminatedpencilround">Laminated
+												<mat-radio-button class="lp" value="laminatedpencilround">Lam Pencil Rnd
 													(FL4)</mat-radio-button>
 											</mat-grid-tile-footer>
 										</mat-grid-tile>
