--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -201,7 +201,7 @@ flip grain 'button' above image, size input on left and bottom.
 													stroke="#0094D9" stroke-width="5.76" fill-opacity="0" />
 											</svg>
 											<mat-grid-tile-footer>
-												<mat-radio-button class="lp" value="apronhalfbullnose">Apron (SSB2)
+												<mat-radio-button class="lp" value="apronhalfbullnose">Apron Round (SSB2)
 													</mat-radio-button>
 											</mat-grid-tile-footer>
 										</mat-grid-tile>
@@ -213,7 +213,7 @@ flip grain 'button' above image, size input on left and bottom.
                         <path d="M358.2178,94.45544 C358.2909,88.98483 355.874,83.14978 351.954,79.33316 L286.9307,144.3564 L286.9307,286.9307 L358.2178,286.9307 z" stroke="#0094D9" stroke-width="5.76" fill-opacity="0" />
                       </svg>
 											<mat-grid-tile-footer>
-												<mat-radio-button class="lp" value="apronmitred">Mitred (45LSQ)
+												<mat-radio-button class="lp" value="apronmitred">Apron Mitred (45LSQ)
 												</mat-radio-button>
 											</mat-grid-tile-footer>
 										</mat-grid-tile>
